# module_template

./: .bazelrc  BUILD  MODULE.bazel
.github/actions/deploy-versioned-pages/: action.yml
.github/workflows/: build_and_test.yml  docs-cleanup.yml  docs.yml
